# mlops-e2e-ml-pipeline

./: .env.example  .gitignore  Dockerfile.airflow  REPORT.md  docker-compose.yaml  pyproject.toml  run-airflow-standalone.sh
dags/: evaluate_agent.py
runs/run-20260701T035348-abba78/: config.json  manifest.json  metrics.json
runs/run-20260701T035348-abba78/run-agent/: preds.json
runs/run-20260701T035348-abba78/run-agent/trajectories/astropy__astropy-12907/: astropy__astropy-12907.traj.json
runs/run-20260701T035348-abba78/run-agent/trajectories/astropy__astropy-13033/: astropy__astropy-13033.traj.json
runs/run-20260701T035348-abba78/run-agent/trajectories/astropy__astropy-13236/: astropy__astropy-13236.traj.json
runs/run-20260701T035348-abba78/run-eval/reports/logs/run_evaluation/run-20260701T035348-abba78/nebius__moonshotai__Kimi-K2.6/astropy__astropy-12907/: test_output.txt
runs/run-20260701T035348-abba78/run-eval/reports/logs/run_evaluation/run-20260701T035348-abba78/nebius__moonshotai__Kimi-K2.6/astropy__astropy-13033/: patch.diff  test_output.txt
runs/run-20260701T035348-abba78/run-eval/reports/logs/run_evaluation/run-20260701T035348-abba78/nebius__moonshotai__Kimi-K2.6/astropy__astropy-13236/: patch.diff  test_output.txt
tests/: test_evaluate_agent.py
