[project]
name = "mlops-assignment-e2e-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "mini-swe-agent>=2.4.1",
    "mlflow>=3.14.0",
    "swebench>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.17",
]
